--- a/level2.html
+++ b/level2.html
@@ -8,18 +8,31 @@
     <script type="module">
       import zim from "https://zimjs.org/cdn/015/zim";
 
+      const path = "assets/";
+      const assets = ["background2.jpg"];
+
       // See Docs under Frame for FIT, FILL, FULL, and TAG
-      new Frame(FIT, 1024, 768, light, dark, ready);
+      new Frame(FIT, 1024, 768, light, dark, ready, assets, path);
       function ready() {
         // given F (Frame), S (Stage), W (width), H (height)
         // put code here
+
+        new Pic(assets[0]).center().sca(0.7).bot();
+
         let numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16];
         let shuffledNumbers = shuffle(numbers);
         let findNumber;
         let currScore = numbers.length;
 
-        let numberToFind = new Label(findNumber).pos(10, 10).alp(0);
+        new Label("Find: ").pos(10, 10);
+        let numberToFind = new Label(findNumber).pos(100, 10).alp(0);
+        new Label("Score:").pos(W - 200, 10);
         let score = new Label(currScore).pos(W - 60, 10).alp(0);
+
+        let instruction = new Label("Click on the correct box").pos(
+          W / 2 - 210,
+          H - 100
+        );
 
         function checkNumber(label) {
           label.color = "black";
@@ -38,6 +51,8 @@
                   buttons: [
                     {
                       label: "PLAY AGAIN",
+                      width: 300,
+                      height: 100,
                       bgColor: green,
                       call: () => {
                         zgo("level2.html");
@@ -45,6 +60,9 @@
                     },
                     {
                       label: "CANCEL",
+                      width: 300,
+                      height: 100,
+                      bgColor: green.lighten(0.1),
                       bgColor: green,
                       call: () => {
                         zgo("index.html");
@@ -106,9 +124,11 @@
               //   zogr(label);
               label.color = "transparent";
               label.outlineColor = "transparent";
+
               if (i == numbers.length) {
                 numberToFind.alp(1);
                 score.alp(1);
+                instruction.alp(1);
 
                 loop(concentrationGrid, (label, i) => {
                   label.on("click", () => checkNumber(label));
