--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>ZIM - Code Creativity</title>
+    <title>Concentration Game</title>
 
     <!-- zimjs.com - JavaScript Canvas Framework -->
     <script type="module">
